# nyc_bike_trips

./: .gitignore  01_collect_transform.md  01_collect_transform.qmd  02_visualise.md  02_visualise.qmd  README.md  README.qmd  collect_transform.md  collect_transform.qmd  main.py  main_refactored.py  pyproject.toml  tox.ini  visualise.md  visualise.qmd
docs/: api.rst  conf.py  index.rst  overview.rst
notebooks/: collect_transform.qmd
polars_geo/: Cargo.toml
polars_geo/polars_geo/: __init__.py
polars_geo/src/: expressions.rs
tests/features/: collect_data.feature
tests/features/steps/: collect_data_steps.py
