[package]
name = "polars_geo"
version = "1.0.0"
edition = "2021"

[lib]
name = "polars_geo"
crate-type = ["cdylib"]

[dependencies]
geo = "0.30"
polars = { version = "0.49", features = ["lazy", "strings", "temporal", "object", "regex"] }
polars-arrow = "0.49"
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.22", features = ["derive"] }